--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
 </head>
 <body>
   <div class="poster">
-    <h1>🔥 Meme Wars Template</h1>
-    <p>Edit this page with your meme (HTML/CSS/JS/images).</p>
-    <img class="motivation_img"src="./daenerys.jpeg"/>
-    <h2>You are unlimited by your imagination</h2>
-    <p>...as long as you watched cartoons</p>
+    <img class="motivation_img"src="./trump.jpg"/>
+    <h2>Let's make America a Third World Country</h2>
+    <p>...Noniiiiiiiiii</p>
   </div>
 </body>
 </html>
